--- a/.github/workflows/test-no-name.yaml
+++ b/.github/workflows/test-no-name.yaml
@@ -9,3 +9,6 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: echo
+        shell: bash
+        run: echo $TEST
