--- a/.github/workflows/test4-with-name.yaml
+++ b/.github/workflows/test4-with-name.yaml
@@ -1,6 +1,16 @@
 name: Foo / Bar / Test 4 with custom name
 on:
   issue_comment:
+  workflow_dispatch:
+    inputs:
+      foo:
+        description: Foo description
+        type: boolean
+        required: true
+      bar:
+        description: Bar description
+        type: boolean
+        required: false
 env:
   TEST: 123
 jobs:
@@ -9,3 +19,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: test-foo-bar
+        shell: bash
+        run: |
+          MY_VAR=${{ github.inputs.foo }} 
+          echo $MY_VAR
+          echo '${{ github.inputs.bar }}' 
