--- a/.github/workflows/test4-with-name.yaml
+++ b/.github/workflows/test4-with-name.yaml
@@ -19,9 +19,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: test-foo-bar
-        shell: bash
+      - name: set-var
         run: |
-          MY_VAR=${{ github.inputs.foo }} 
-          echo $MY_VAR
+          MY_VAR=${{ github.inputs.foo }}
+      - name: test-foo-bar
+        run: |
+          echo $MY_VAR &
           echo '${{ github.inputs.bar }}' 
