--- a/.github/workflows/test4-with-name.yaml
+++ b/.github/workflows/test4-with-name.yaml
@@ -21,8 +21,8 @@ jobs:
         uses: actions/checkout@v2
       - name: set-var
         run: |
-          MY_VAR=${{ github.inputs.foo }}
+          MY_VAR=${{ github.event.inputs.foo }}
       - name: test-foo-bar
         run: |
           echo $MY_VAR &
-          echo '${{ github.inputs.bar }}' 
+          echo '${{ github.event.inputs.bar }}' 
