--- a/.github/workflows/test4-with-name.yaml
+++ b/.github/workflows/test4-with-name.yaml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       pr:
-        description: PR
+        description: PR description
         type: string
         required: true
       foo:
@@ -20,10 +20,11 @@ env:
   FOO: ${{ github.event.inputs.foo }}
   BAR: ${{ github.event.inputs.bar }}
   FOO_BAR: $FOO
-  FOO_BAR2: ${{
-    github.event.issue.number ||
-    github.event.inputs.pr
-  }}
+  FOO_BAR2: |
+    ${{
+      github.event.issue.number ||
+      github.event.inputs.pr
+    }}
 jobs:
   Do-Something:
     runs-on: ubuntu-latest
