--- a/.github/workflows/test4-with-name.yaml
+++ b/.github/workflows/test4-with-name.yaml
@@ -55,4 +55,6 @@ jobs:
           echo $MY_VAR
       - name: echo bar
         run: |
+          echo 'foo'
+          echo 'bar'
           echo '${{ github.event.inputs.bar }}' 
