--- a/.github/workflows/test4-with-name.yaml
+++ b/.github/workflows/test4-with-name.yaml
@@ -57,4 +57,6 @@ jobs:
         run: |
           echo 'foo'
           echo 'bar'
+          TEST_VAR=123
           echo '${{ github.event.inputs.bar }}' 
+          echo $TEST_VAR
