--- a/.github/workflows/test4-with-name.yaml
+++ b/.github/workflows/test4-with-name.yaml
@@ -1,6 +1,8 @@
 name: Foo / Bar / Test 4 with custom name
 on:
   issue_comment:
+    types:
+      - created
   workflow_dispatch:
     inputs:
       pr:
